<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginScreenFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="10dp"
            android:text="@string/verify_number"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/send_msg_string"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="3"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="+91"
                app:backgroundTint="@color/orange" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:backgroundTint="@color/orange" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/rectangle_round"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/lato"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="17dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>